# cognix

./: .gitignore  CLAUDE.md  README.md  cognitive_similarity_embedding_system_design_v2.md  pyproject.toml  requirements.txt
artifacts/cached_vectors/: brain_vectors_index.json
cognix/: __init__.py  phase3_eval.py  prepare_r2_data.py  provo_loader.py  tribe_wrapper.py
data/: phase3_provo_chunks.jsonl  r2_results.jsonl  r2_unique_texts.jsonl  validation_pairs.jsonl  validation_pairs_r2.jsonl  validation_pairs_r2_handcrafted.jsonl  validation_results.jsonl
notebooks/: 00_validation_experiment.ipynb  01_r2_tribe_inference.ipynb  02_r2_analysis.ipynb  03_phase3_inference.ipynb  03_r3_region_pooling.ipynb  04_phase3_analysis.ipynb
tests/: test_phase3_eval.py  test_provo_loader.py
