[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cognix"
version = "0.1.0"
description = "Brain-grounded cognitive similarity embeddings using TRIBE v2"
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
authors = [
    {name = "David Gershony"},
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.26.4,<2.1.0",
    "sentence-transformers>=2.2",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["cognix*"]
